--- a/main.css
+++ b/main.css
@@ -1,102 +1,308 @@
 body {
-	display: inline-flex;
-	width: 100%;
-	margin: 0;
+	background-color: #660c10;
 }
 
-.side {
-	margin: 0;
-	width: 100%;
+#name {
+	width: 100vw;
+	position: fixed;
+	top: 0;
 }
 
-h2 {
-	max-width: 50%;
-	margin: 20px;
-	font-family: 'Dancing Script', cursive;
-	font-size: 35px;
-	text-align: center;
-}
-
-a {
-	position: relative;
-	z-index: 100;
-}
-
-a:hover {
-	opacity: .5;
-}
-
-.upper {
+h1 {
 	font-family: 'Amatic SC', cursive;
-	font-size: 60px;
+	font-size: 90px;
+	width: 100%;
+	text-align:center;
+	color: white;
+	line-height: 90px;
+	margin-top: 20px;
+	margin-bottom: 0;
 }
 
-#resume {
-	position: absolute;
-	left: 45%;
-	top: 80%;
-	width: 10%;
-	background-color: white;
+#icons {
+	position:absolute;
+	right:0;
+	top:0;
+	margin: 20px;
+}
+
+.icon {
+	filter: invert(100);
+	margin: 5px;
+	width: 50px;
+	height: 50px;
+}
+
+.icon:hover {
+cursor: pointer;
+}
+
+@media only screen and (max-width: 700px) {
+   #icons {
+	    width: 100%;
+		position:relative;
+		display: inline-flex;
+		justify-content:center;
+		margin: 0;
+		margin-top: 5px;
+	}
+	
+	.icon {
+		margin-bottom: 0;
+		width: 50px;
+		height: 50px;
+	}
+}
+
+#links {
+	display: inline-flex;
+	justify-content: center;
+	width: 100%;
+	margin: 0;
+}
+
+.title-link {
+	width: 120px;
 	border-style: solid;
 	border-width: 2px;
-	border-color: black;
+	border-color: #F0F0F0;
 	text-align: center;
 	text-decoration: none;
-	color: black;
-	font-family: 'Dancing Script', cursive;
+	color: #F0F0F0;
+	font-family: 'Antic', sans-serif;
 	font-size: 30px;
 	font-weight: bold;
 	box-shadow: 3px 3px gray;
+	margin: 5px;
 }
 
-#left {
-	background-color: rgb(0, 0, 64);
-	margin: 0;
-}
-
-#portrait {
-	height: 100%;
-	margin: 0;
-}
-
-#projects {
-	text-decoration: none;
-	color: rgb(0, 0, 64);
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
-	height: 100%;
-}
-
-#outreach {
-	text-decoration: none;
-	color: rgb(12, 220, 142);
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
-	height: 100%;
-	margin-left: 10%;
-}
-
-#right {
-	background-color: rgb(12, 220, 142);
-	margin: 0;
+.title-link:hover {
+	opacity: .5 !important;
 }
 
 .overtext {
-	position: absolute;
+	position: fixed;
 	opacity: .2;
 	color: gray;
 	font-size: 20px;
 	line-height: 20px;
 	overflow: hidden;
 	width: 48%;
-	height: 100%;
+	height: 100vh;
 	margin: 0;
 	padding: 0;
+	top:0;
+}
+
+@media only screen and (max-width: 700px) {
+	.overtext {
+		width: 100%;
+	}
+	#right-overtext {
+		display: none;
+	}
 }
 
 #right-overtext {
 	left: 55%;
 	width: 43%;
 }
+
+#timeline {
+	white-space: nowrap;
+	margin-top: 195px;
+}
+
+#dates {
+	display: inline-flex;
+}
+
+.event {
+	white-space: normal;
+	display: inline-flex;
+	flex-direction: column;
+	align-items: center;
+	max-width: 25vw;
+	min-width: 300px;
+	margin-left: 30px;
+	height: 60%;
+}
+
+.big-space {
+	margin-left: 90px;
+}
+
+.tick {
+	background-color: white;
+	width: 5px;
+	height: 20px;
+	margin-right: 5px;
+	margin-left: 20px;
+}
+
+.date {
+	color: white;
+	font-family: 'Antic', sans-serif;
+	font-size: 25px;
+	line-height: 25px;
+	margin:0px;
+}
+
+
+#line {
+	width: 100%;
+	height: 0;
+	margin: 0;
+	padding: 0;
+	border-style: solid;
+	border-color: white;
+	position: fixed;
+	top: 225px;
+}
+
+@media only screen and (max-width: 700px) {
+	#timeline {
+		white-space: nowrap;
+		margin-top: 235px;
+	}
+	
+	#line {
+	width: 100%;
+	height: 0;
+	margin: 0;
+	padding: 0;
+	border-style: solid;
+	border-color: white;
+	position: fixed;
+	top: 265px;
+}
+}
+
+.description {
+	color: black;
+	font-family: 'Antic', sans-serif;
+	border-color: white;
+	border-style: solid;
+	border-width: 5px;
+	padding: 10px;
+	background-color: rgb(200, 200, 200);
+	margin-top:0;
+	height: 100%;
+	position: relative;
+}
+
+.event-link {
+	text-decoration: underline;
+	position: absolute;
+	bottom: 20px;
+	
+}
+
+.event-link:hover {
+	text-decoration: none;
+	font-weight: bold;
+}
+
+.logo {
+	height: 40px;
+	margin-right: 5px;
+	margin-bottom: 0;
+}
+
+.title-div {
+	display: inline-flex;
+	align-items: center;
+	margin-top: 5px;
+	margin-bottom: 10px;
+}
+
+.title {
+	margin:0;
+}
+
+#who {
+	display: none;
+	position: fixed;
+	width: 450px;
+	top: 10px;
+	right: 80px;
+	height: 350px;
+	color: black;
+	font-family: 'Antic', sans-serif;
+	border-color: white;
+	border-style: solid;
+	border-width: 5px;
+	padding: 0px;
+	background-color: rgb(200, 200, 200);
+}
+
+@media only screen and (max-width: 700px) {
+	#who {
+		right: 10px;
+	}
+}
+
+li {
+	margin-bottom: 5px;
+}
+
+#who-top {
+	display: inline-flex;
+	justify-content: space-between;
+	width: 100%;
+	margin: 0;
+	color: black;
+	font-weight: bold;
+	font-size: 30px;
+	line-height: 30px;
+	font-family: 'Amatic SC', cursive;
+}
+
+#who-content {
+	display: inline-flex;
+	align-items: center;
+	margin-top: 20px;
+}
+
+#who-top h3 {
+	margin-top: 20px;
+	margin-left: 10px;
+	width: 100%;
+	text-align: center;
+	margin-bottom: 0;
+}
+
+#who-top p {
+	margin: 0;
+	font-family: 'Antic', sans-serif;
+}
+
+#who-top img {
+	margin: 5px;
+	width: 50px;
+	height: 50px;
+}
+#who-top img:hover {
+	cursor: pointer;
+}
+
+ul {
+	margin-right: 10px;
+}
+
+#who a {
+	text-decoration: none;
+	font-weight: bold;
+}
+
+#who a:hover {
+	text-decoration: underline;
+}
+
+#bio-pic {
+	margin-left: 10px;
+	width: 200px;
+	margin-top:0;
+	border-radius: 5px;
+}
+
