--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body {
 h1 {
 	font-family: 'Amatic SC', cursive;
 	font-size: 90px;
-	width: 100%;
+	width: 100vw;
 	text-align:center;
 	color: white;
 	line-height: 90px;
@@ -122,10 +122,11 @@ cursor: pointer;
 	display: inline-flex;
 	flex-direction: column;
 	align-items: center;
-	max-width: 25vw;
+	width: 25vw;
 	min-width: 300px;
 	margin-left: 30px;
 	height: 60%;
+	max-height: 500px;
 }
 
 .big-space {
